# agentweave

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  TODO.md  publish_pypi.sh  pyproject.toml
.github/workflows/: ruff.yml
agentweave/: __init__.py
agentweave/cli/: __init__.py  main.py
agentweave/cli/commands/: __init__.py  add.py  convert_to_template.py  deploy.py  dev.py  init.py  install_env.py  list_cmd.py  run.py  template.py
agentweave/templates/basic/: .env.example  README.md  agentweave.yaml  check_tools.py  requirements.txt  schema.yaml  setup.py
agentweave/templates/basic/agents/: agent.py  document_processor.py
agentweave/templates/basic/backend/: main.py
agentweave/templates/basic/backend/routers/: agent.py  documents.py  tools.py
agentweave/templates/basic/backend/utils/: config.py
agentweave/templates/basic/frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
agentweave/templates/basic/frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
agentweave/templates/basic/frontend/src/components/: ChatMessage.tsx  DocumentViewer.tsx  Footer.tsx  Header.tsx  Resizable.tsx  TypingIndicator.tsx
agentweave/templates/basic/frontend/src/components/ui/: execution-steps-minimal.tsx  execution-steps.tsx  switch.tsx
agentweave/templates/basic/frontend/src/lib/: api.ts  utils.ts
agentweave/templates/basic/frontend/src/lib/hooks/: fetcher.ts  types.ts  useDocumentMutations.ts  useDocuments.ts  useMutation.ts  useRequest.ts  useTools.ts
agentweave/templates/basic/frontend/src/lib/swr/: types.ts  useTools.ts
agentweave/templates/basic/memory/: __init__.py  simple.py
agentweave/templates/basic/monitoring/: metrics.py  tracing.py
agentweave/templates/basic/tools/: __init__.py  calculator.py  knowledge_base.py  registry.py  vector_store.py  weather.py
agentweave/utils/: __init__.py  config.py  template_generator.py  templates.py
